--- a/bus-stop-keras/run-cell-by-cell.ipynb
+++ b/bus-stop-keras/run-cell-by-cell.ipynb
@@ -31,7 +31,7 @@
     "from collections import deque\n",
     "from pt_modeler import ConstructPtModeler\n",
     "from huggingface_utils import MODELS\n",
-    "from tensorflow.keras.activations import softmax\n",
+    "from scipy.special import softmax\n",
     "from sklearn.utils import shuffle\n",
     "from sklearn.metrics import log_loss, f1_score, accuracy_score\n",
     "from scipy.spatial.distance import cosine,euclidean\n",
@@ -409,7 +409,7 @@
     "    trn_loss,trn_acc = model.evaluate(X_lab, y_lab)\n",
     "    tst_loss,tst_acc = model.evaluate(X_tst, y_tst) # \n",
     "    \n",
-    "    unl_probs = softmax(model(X_unl)).numpy()\n",
+    "    unl_probs = softmax(model.predict(X_unl),axis=1)\n",
     "    unl_confs = unl_probs.max(1)\n",
     "    unl_dist = unl_probs.mean(0)\n",
     "    \n",
