--- a/bus-stop-keras/run-cell-by-cell.ipynb
+++ b/bus-stop-keras/run-cell-by-cell.ipynb
@@ -324,7 +324,7 @@
     "p_l_ = list(np.around(p_l_conf,4))\n",
     "logger.info(\"p_l_conf = [{}, {}, {}, ..., {}, {}, {}]\".format(p_l_[0],p_l_[1],p_l_[2],p_l_[-3],p_l_[-2],p_l_[-1]))\n",
     "logger.info(\"class distribution of unlabeled data: pred {} -> cali {}\".format(\n",
-    "    np.around(np.mean(preliminary_records['ulb_dist'],0),4), np.around(c_u_cali,4) ))"
+    "    np.around(np.mean(preliminary_records['unl_dist'],0),4), np.around(c_u_cali,4) ))"
    ]
   },
   {
